--- a/stlyle.css
+++ b/stlyle.css
@@ -6,9 +6,43 @@
 }
 
 body {
-  color: rgb(11, 11, 11);
+  font-family: "Madimi One", sans-serif;
 }
 
+.socials {
+  color: blueviolet;
+  border: 1px solid #f9f7;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 15px 30px;
+  line-height: 25px;
+}
+
+.fitness {
+  color: blueviolet;
+  border: 1px solid #f9f7;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 15px 30px;
+  line-height: 25px;
+}
+
+.manifest {
+  color: blueviolet;
+  border: 1px solid #f9f7;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 15px 30px;
+  line-height: 25px;
+}
+.forecast {
+  color: blueviolet;
+  border: 1px solid #f9f7;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 15px 30px;
+  line-height: 25px;
+}
 .header {
   position: fixed;
   top: 0;
