--- a/stlyle.css
+++ b/stlyle.css
@@ -5,8 +5,14 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
+a {
   font-family: "Madimi One", sans-serif;
+}
+
+P {
+  line-height: 30px;
+  font-family: "Madimi One", sans-serif;
+  font-size: 15px;
 }
 
 .socials {
@@ -44,7 +50,7 @@ body {
   line-height: 25px;
 }
 .header {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -89,24 +95,20 @@ body {
   background-size: cover;
   background-position: center;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   background-color: rgb(0 0 50);
   padding: 70px 50px;
 }
 
-.content {
-  max-width: 600px;
-}
-
-.content h3 {
+h3 {
   font-size: 32px;
   font-weight: 700;
   color: rgb(235, 235, 255);
 }
-.content h1 {
+h1 {
   font-size: 50px;
   font-weight: 700;
-  margin: -3px 0;
+  margin-top: 5px;
   color: white;
 }
 
@@ -128,9 +130,9 @@ span {
 }
 
 .image-container {
-  position: absolute;
-  top: 25%;
-  right: 100px;
+  position: relative;
+  margin-top: 0px;
+  right: 20%;
   width: 500px;
   height: 500px;
   border-radius: 50%;
@@ -142,7 +144,7 @@ span {
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
-  background-color: chocolate;
+  background-color: rgb(201, 113, 49);
 }
 
 html {
