--- a/stlyle.css
+++ b/stlyle.css
@@ -7,6 +7,7 @@
 
 a {
   font-family: "Madimi One", sans-serif;
+  background-color: rgb(246, 233, 246);
 }
 
 P {
@@ -59,7 +60,7 @@ P {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  color: rgb(255, 255, 255);
+  color: rgb(251, 221, 251);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: rgba(0, 0, 0, 150);
 }
@@ -76,14 +77,14 @@ P {
 .navbar a {
   position: relative;
   font-size: 1.1em;
-  color: white;
+  color: rgb(251, 246, 251);
   text-decoration: none;
   font-weight: 700;
   margin-left: 30px;
 }
 
 .navbar a:hover {
-  color: whitesmoke;
+  color: rgb(247, 230, 247);
 }
 
 .home {
