--- a/stlyle.css
+++ b/stlyle.css
@@ -7,7 +7,6 @@
 
 a {
   font-family: "Madimi One", sans-serif;
-  background-color: rgb(246, 233, 246);
 }
 
 P {
@@ -57,18 +56,18 @@ P {
   padding: 20px 20px;
   padding-right: 10%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   z-index: 100;
   color: rgb(251, 221, 251);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: rgba(0, 0, 0, 150);
+  background-color: #23202c;
 }
 
 .My Logo {
   position: relative;
   font-size: 25px;
-  color: rgb(255 255 255);
+  color: rgb(248, 230, 247);
   text-decoration: none;
   font-weight: 800;
   cursor: pointer;
@@ -77,14 +76,9 @@ P {
 .navbar a {
   position: relative;
   font-size: 1.1em;
-  color: rgb(251, 246, 251);
   text-decoration: none;
   font-weight: 700;
   margin-left: 30px;
-}
-
-.navbar a:hover {
-  color: rgb(247, 230, 247);
 }
 
 .home {
@@ -96,7 +90,7 @@ P {
   background-position: center;
   display: flex;
   align-items: flex-end;
-  background-color: rgb(0 0 50);
+  background-color: #23202c;
   padding: 70px 50px;
 }
 
@@ -113,7 +107,7 @@ h1 {
 }
 
 span {
-  color: #512;
+  color: rgb(233, 189, 200);
 }
 
 .image-container {
