--- a/stlyle.css
+++ b/stlyle.css
@@ -5,7 +5,17 @@
   --profile-color: #b592ce;
   --socials-color: #9374a5a7;
 }
+span {
+  color: rgb(52, 55, 59);
+  color: var(--profile-color);
+}
 
+strong {
+  color: var(--profile-color);
+}
+.h3 {
+  color: #23202c;
+}
 .social-links,
 .flex-center {
   display: flex;
@@ -176,10 +186,6 @@ h1 {
   font-weight: 700;
   margin-top: 5px;
   color: white;
-}
-
-span {
-  color: rgb(233, 189, 200);
 }
 
 #details {
